--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
 
             <div class="card-content">
-              <span data-aos="fade-down" class="title-large">$710.68</span>
+              <span data-aos="fade-down" class="title-large">$710000</span>
 
               <h3 data-aos="fade-down">
                 <a href="#" class="title-small card-title">COVA Home Reality</a>
@@ -155,15 +155,15 @@
 
               <div data-aos="flip-down" class="card-meta-list">
                 <div class="meta-item">
-                  <i class='bx bx-bed bx-fade-up' ></i>
+                  <i class='bx bx-bed' ></i>
                   <span class="meta-text label-medium">3 Bed</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-bath bx-fade-up'></i>
+                  <i class='bx bx-bath'></i>
                   <span class="meta-text label-medium">2 Bath</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-chair bx-fade-up'></i>
+                  <i class='bx bx-chair'></i>
                   <span class="meta-text label-medium">1430 sqft</span>
                 </div>
               </div>
@@ -181,7 +181,7 @@
             </div>
 
             <div class="card-content">
-              <span data-aos="fade-down" class="title-large">$472.45</span>
+              <span data-aos="fade-down" class="title-large">$472000</span>
 
               <h3 data-aos="fade-down">
                 <a href="#" class="title-small card-title">Exit Reality</a>
@@ -193,15 +193,15 @@
 
               <div data-aos="flip-down" class="card-meta-list">
                 <div class="meta-item">
-                  <i class='bx bx-bed bx-fade-up' ></i>
+                  <i class='bx bx-bed' ></i>
                   <span class="meta-text label-medium">5 Bed</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-bath bx-fade-up'></i>
+                  <i class='bx bx-bath'></i>
                   <span class="meta-text label-medium">4 Bath</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-chair bx-fade-up'></i>
+                  <i class='bx bx-chair'></i>
                   <span class="meta-text label-medium">1630 sqft</span>
                 </div>
               </div>
@@ -219,7 +219,7 @@
             </div>
 
             <div data-aos="fade-down" class="card-content">
-              <span class="title-large">$475.85</span>
+              <span class="title-large">$475000</span>
 
               <h3 data-aos="fade-down">
                 <a href="#" class="title-small card-title">Real Estate Group</a>
@@ -231,15 +231,15 @@
 
               <div data-aos="flip-down" class="card-meta-list">
                 <div class="meta-item">
-                  <i class='bx bx-bed bx-fade-up' ></i>
+                  <i class='bx bx-bed' ></i>
                   <span class="meta-text label-medium">8 Bed</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-bath bx-fade-up'></i>
+                  <i class='bx bx-bath'></i>
                   <span class="meta-text label-medium">5 Bath</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-chair bx-fade-up'></i>
+                  <i class='bx bx-chair'></i>
                   <span class="meta-text label-medium">1240 sqft</span>
                 </div>
               </div>
@@ -257,7 +257,7 @@
             </div>
 
             <div class="card-content">
-              <span data-aos="fade-down" class="title-large">$576.28</span>
+              <span data-aos="fade-down" class="title-large">$576000</span>
 
               <h3 data-aos="fade-down">
                 <a href="#" class="title-small card-title">757 Reality</a>
@@ -269,15 +269,15 @@
 
               <div data-aos="flip-down" class="card-meta-list">
                 <div class="meta-item">
-                  <i class='bx bx-bed bx-fade-up' ></i>
+                  <i class='bx bx-bed' ></i>
                   <span class="meta-text label-medium">6 Bed</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-bath bx-fade-up'></i>
+                  <i class='bx bx-bath'></i>
                   <span class="meta-text label-medium">6 Bath</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-chair bx-fade-up'></i>
+                  <i class='bx bx-chair'></i>
                   <span class="meta-text label-medium">1260 sqft</span>
                 </div>
               </div>
@@ -295,7 +295,7 @@
             </div>
 
             <div class="card-content">
-              <span data-aos="fade-down" class="title-large">$473.28</span>
+              <span data-aos="fade-down" class="title-large">$473000</span>
 
               <h3 data-aos="fade-down">
                 <a href="#" class="title-small card-title">Beach Press Reality Inc.</a>
@@ -307,15 +307,15 @@
 
               <div data-aos="flip-down" class="card-meta-list">
                 <div class="meta-item">
-                  <i class='bx bx-bed bx-fade-up' ></i>
+                  <i class='bx bx-bed' ></i>
                   <span class="meta-text label-medium">10 Bed</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-bath bx-fade-up'></i>
+                  <i class='bx bx-bath'></i>
                   <span class="meta-text label-medium">8 Bath</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-chair bx-fade-up'></i>
+                  <i class='bx bx-chair'></i>
                   <span class="meta-text label-medium">2350 sqft</span>
                 </div>
               </div>
@@ -333,7 +333,7 @@
             </div>
 
             <div class="card-content">
-              <span data-aos="fade-down" class="title-large">$105.55</span>
+              <span data-aos="fade-down" class="title-large">$105000</span>
 
               <h3 data-aos="fade-down">
                 <a href="#" class="title-small card-title">Keller Williams Elite Town Center</a>
@@ -345,15 +345,15 @@
 
               <div data-aos="flip-down" class="card-meta-list">
                 <div class="meta-item">
-                  <i class='bx bx-bed bx-fade-up' ></i>
+                  <i class='bx bx-bed' ></i>
                   <span class="meta-text label-medium">8 Bed</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-bath bx-fade-up'></i>
+                  <i class='bx bx-bath'></i>
                   <span class="meta-text label-medium">8 Bath</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-chair bx-fade-up'></i>
+                  <i class='bx bx-chair'></i>
                   <span class="meta-text label-medium">1950 sqft</span>
                 </div>
               </div>
@@ -371,7 +371,7 @@
             </div>
 
             <div class="card-content">
-              <span data-aos="fade-down" class="title-large">$739.65</span>
+              <span data-aos="fade-down" class="title-large">$739000</span>
 
               <h3 data-aos="fade-down">
                 <a href="#" class="title-small card-title">All Pros Real Estate</a>
@@ -383,15 +383,15 @@
 
               <div data-aos="flip-down" class="card-meta-list">
                 <div class="meta-item">
-                  <i class='bx bx-bed bx-fade-up' ></i>
+                  <i class='bx bx-bed' ></i>
                   <span class="meta-text label-medium">4 Bed</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-bath bx-fade-up'></i>
+                  <i class='bx bx-bath'></i>
                   <span class="meta-text label-medium">4 Bath</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-chair bx-fade-up'></i>
+                  <i class='bx bx-chair'></i>
                   <span class="meta-text label-medium">1580 sqft</span>
                 </div>
               </div>
@@ -409,7 +409,7 @@
             </div>
 
             <div class="card-content">
-              <span data-aos="fade-down" class="title-large">$948.55</span>
+              <span data-aos="fade-down" class="title-large">$948000</span>
 
               <h3 data-aos="fade-down">
                 <a href="#" class="title-small card-title">FIT Reality</a>
@@ -421,15 +421,15 @@
 
               <div data-aos="flip-down" class="card-meta-list">
                 <div class="meta-item">
-                  <i class='bx bx-bed bx-fade-up'></i>
+                  <i class='bx bx-bed'></i>
                   <span class="meta-text label-medium">3 Bed</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-bath bx-fade-up'></i>
+                  <i class='bx bx-bath'></i>
                   <span class="meta-text label-medium">2 Bath</span>
                 </div>
                 <div class="meta-item">
-                  <i class='bx bx-chair bx-fade-up'></i>
+                  <i class='bx bx-chair'></i>
                   <span class="meta-text label-medium">1120 sqft</span>
                 </div>
               </div>
